Add mpc fork of submodule
The fork includes a patch for an mpc_parse_pipe upstream issue.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "mpc"]
 	path = mpc
 	url = git://github.com/nmeum/mpc.git
+[submodule "vendor/mpc"]
+	path = vendor/mpc
+	url = git://github.com/nmeum/mpc.git
+	branch = fix-109
