use unsigned instead of signed integer where appropriate

--- a/tests/command_list_multiple/output.yml
+++ b/tests/command_list_multiple/output.yml
@@ -4,11 +4,11 @@ argv:
     value:
       name: consume
       argv:
-        - type: int
+        - type: uint
           value: 1
   - type: cmd
     value:
       name: crossfade
       argv:
-        - type: int
+        - type: uint
           value: 1
