--- a/tests/command_list_multiple/output.yml
+++ b/tests/command_list_multiple/output.yml
@@ -4,8 +4,8 @@ argv:
     value:
       name: consume
       argv:
-        - type: uint
-          value: 1
+        - type: bool
+          value: true
   - type: cmd
     value:
       name: crossfade
