--- a/tests/command_list_ok/output.yml
+++ b/tests/command_list_ok/output.yml
@@ -10,5 +10,5 @@ argv:
     value:
       name: consume
       argv:
-        - type: uint
-          value: 0
+        - type: bool
+          value: false
