--- a/tests/command_list_single/output.yml
+++ b/tests/command_list_single/output.yml
@@ -4,5 +4,5 @@ argv:
     value:
       name: consume
       argv:
-        - type: uint
-          value: 1
+        - type: bool
+          value: true
