vendor: switch back to upstream version
My PR, fixing mpc_parse_pipe, has been merged.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,4 @@
-[submodule "mpc"]
-	path = mpc
-	url = git://github.com/nmeum/mpc.git
 [submodule "vendor/mpc"]
 	path = vendor/mpc
-	url = git://github.com/nmeum/mpc.git
+	url = git://github.com/orangeduck/mpc.git
 	branch = fix-109
