Use mpd_argument_t for tagtypes list

--- a/tests/tagtypes_disable/output.yml
+++ b/tests/tagtypes_disable/output.yml
@@ -1,7 +1,8 @@
 name: tagtypes disable
 argv:
-  - type: list
-    value:
-      - Artist
-      - Album
-      - Date
+  - type: str
+    value: Artist
+  - type: str
+    value: Album
+  - type: str
+    value: Date
