--- a/tests/tagtypes_enable/output.yml
+++ b/tests/tagtypes_enable/output.yml
@@ -1,6 +1,6 @@
 name: tagtypes enable
 argv:
-  - type: list
-    value:
-      - Album
-      - Date
+  - type: str
+    value: Album
+  - type: str
+    value: Date
